tests/ui/lang/u32/leading_zeros.stderr
error: cannot cast between pointer types
       from `*u32`
         to `*u8`
   --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:535:5
    |
535 | /     uint_impl! {
536 | |         Self = u8,
537 | |         ActualT = u8,
538 | |         SignedT = i8,
...   |
552 | |         bound_condition = "",
553 | |     }
    | |_____^
    |
note: used from within `<u8>::leading_zeros`
   --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:535:5
    |
535 | /     uint_impl! {
536 | |         Self = u8,
537 | |         ActualT = u8,
538 | |         SignedT = i8,
...   |
552 | |         bound_condition = "",
553 | |     }
    | |_____^
note: called by `leading_zeros::leading_zeros_u8`
   --> $DIR/leading_zeros.rs:12:12
    |
12  |     *out = u8::leading_zeros(*buffer);
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `leading_zeros_u8`
   --> $DIR/leading_zeros.rs:8:8
    |
8   | pub fn leading_zeros_u8(
    |        ^^^^^^^^^^^^^^^^

error: cannot cast between pointer types
       from `*u32`
         to `*u16`
    --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:1151:5
     |
1151 | /     uint_impl! {
1152 | |         Self = u16,
1153 | |         ActualT = u16,
1154 | |         SignedT = i16,
...    |
1168 | |         bound_condition = "",
1169 | |     }
     | |_____^
     |
note: used from within `<u16>::leading_zeros`
    --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:1151:5
     |
1151 | /     uint_impl! {
1152 | |         Self = u16,
1153 | |         ActualT = u16,
1154 | |         SignedT = i16,
...    |
1168 | |         bound_condition = "",
1169 | |     }
     | |_____^
note: called by `leading_zeros::leading_zeros_u16`
    --> $DIR/leading_zeros.rs:20:12
     |
20   |     *out = u16::leading_zeros(*buffer);
     |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `leading_zeros_u16`
    --> $DIR/leading_zeros.rs:16:8
     |
16   | pub fn leading_zeros_u16(
     |        ^^^^^^^^^^^^^^^^^

error: cannot cast between pointer types
       from `*u32`
         to `*u64`
    --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:1223:5
     |
1223 | /     uint_impl! {
1224 | |         Self = u64,
1225 | |         ActualT = u64,
1226 | |         SignedT = i64,
...    |
1240 | |         bound_condition = "",
1241 | |     }
     | |_____^
     |
note: used from within `<u64>::leading_zeros`
    --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:1223:5
     |
1223 | /     uint_impl! {
1224 | |         Self = u64,
1225 | |         ActualT = u64,
1226 | |         SignedT = i64,
...    |
1240 | |         bound_condition = "",
1241 | |     }
     | |_____^
note: called by `leading_zeros::leading_zeros_u64`
    --> $DIR/leading_zeros.rs:36:12
     |
36   |     *out = u64::leading_zeros(*buffer);
     |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `leading_zeros_u64`
    --> $DIR/leading_zeros.rs:32:8
     |
32   | pub fn leading_zeros_u64(
     |        ^^^^^^^^^^^^^^^^^

error: cannot cast between pointer types
       from `*u32`
         to `*u8`
   --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:535:5
    |
535 | /     uint_impl! {
536 | |         Self = u8,
537 | |         ActualT = u8,
538 | |         SignedT = i8,
...   |
552 | |         bound_condition = "",
553 | |     }
    | |_____^
    |
note: used from within `<u8>::leading_zeros`
   --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:535:5
    |
535 | /     uint_impl! {
536 | |         Self = u8,
537 | |         ActualT = u8,
538 | |         SignedT = i8,
...   |
552 | |         bound_condition = "",
553 | |     }
    | |_____^
note: called by `<i8>::leading_zeros`
   --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:335:5
    |
335 | /     int_impl! {
336 | |         Self = i8,
337 | |         ActualT = i8,
338 | |         UnsignedT = u8,
...   |
353 | |         bound_condition = "",
354 | |     }
    | |_____^
note: called by `leading_zeros::leading_zeros_i8`
   --> $DIR/leading_zeros.rs:44:12
    |
44  |     *out = i8::leading_zeros(*buffer);
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `leading_zeros_i8`
   --> $DIR/leading_zeros.rs:40:8
    |
40  | pub fn leading_zeros_i8(
    |        ^^^^^^^^^^^^^^^^

error: cannot cast between pointer types
       from `*u32`
         to `*u16`
    --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:1151:5
     |
1151 | /     uint_impl! {
1152 | |         Self = u16,
1153 | |         ActualT = u16,
1154 | |         SignedT = i16,
...    |
1168 | |         bound_condition = "",
1169 | |     }
     | |_____^
     |
note: used from within `<u16>::leading_zeros`
    --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:1151:5
     |
1151 | /     uint_impl! {
1152 | |         Self = u16,
1153 | |         ActualT = u16,
1154 | |         SignedT = i16,
...    |
1168 | |         bound_condition = "",
1169 | |     }
     | |_____^
note: called by `<i16>::leading_zeros`
    --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:359:5
     |
359  | /     int_impl! {
360  | |         Self = i16,
361  | |         ActualT = i16,
362  | |         UnsignedT = u16,
...    |
377  | |         bound_condition = "",
378  | |     }
     | |_____^
note: called by `leading_zeros::leading_zeros_i16`
    --> $DIR/leading_zeros.rs:52:12
     |
52   |     *out = i16::leading_zeros(*buffer);
     |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `leading_zeros_i16`
    --> $DIR/leading_zeros.rs:48:8
     |
48   | pub fn leading_zeros_i16(
     |        ^^^^^^^^^^^^^^^^^

error: cannot cast between pointer types
       from `*u32`
         to `*u64`
    --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:1223:5
     |
1223 | /     uint_impl! {
1224 | |         Self = u64,
1225 | |         ActualT = u64,
1226 | |         SignedT = i64,
...    |
1240 | |         bound_condition = "",
1241 | |     }
     | |_____^
     |
note: used from within `<u64>::leading_zeros`
    --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:1223:5
     |
1223 | /     uint_impl! {
1224 | |         Self = u64,
1225 | |         ActualT = u64,
1226 | |         SignedT = i64,
...    |
1240 | |         bound_condition = "",
1241 | |     }
     | |_____^
note: called by `<i64>::leading_zeros`
    --> /home/firestar99/.rustup/toolchains/nightly-2024-11-22-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/num/mod.rs:407:5
     |
407  | /     int_impl! {
408  | |         Self = i64,
409  | |         ActualT = i64,
410  | |         UnsignedT = u64,
...    |
425  | |         bound_condition = "",
426  | |     }
     | |_____^
note: called by `leading_zeros::leading_zeros_i64`
    --> $DIR/leading_zeros.rs:68:12
     |
68   |     *out = i64::leading_zeros(*buffer);
     |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `leading_zeros_i64`
    --> $DIR/leading_zeros.rs:64:8
     |
64   | pub fn leading_zeros_i64(
     |        ^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

